salesforce/force-app/main/default/objects/RecoveryAction__c/RecoveryAction__c.object-meta.xml
<CustomObject>
    <description>Staged fix workflow. State machine: Pending → Approved → Committed (or Rejected/Expired).</description>
    <label>Recovery Action</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Recovery Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recovery Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>