salesforce/force-app/main/default/objects/RecoveryAction__c/fields/ActualValue__c.field-meta.xml
<CustomField>
    <fullName>ActualValue__c</fullName>
    <label>Actual Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>