salesforce/force-app/main/default/objects/RecoveryAction__c/fields/CommittedAt__c.field-meta.xml
<CustomField>
    <fullName>CommittedAt__c</fullName>
    <label>Committed At</label>
    <type>DateTime</type>
</CustomField>