salesforce/force-app/main/default/objects/RecoveryAction__c/fields/CommitVerified__c.field-meta.xml
<CustomField>
    <fullName>CommitVerified__c</fullName>
    <label>Commit Verified</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>