salesforce/force-app/main/default/objects/RecoveryAction__c/fields/DraftPayload__c.field-meta.xml
<CustomField>
    <fullName>DraftPayload__c</fullName>
    <label>Draft Payload (JSON)</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>