salesforce/force-app/main/default/objects/RecoveryAction__c/fields/ExpectedValue__c.field-meta.xml
<CustomField>
    <fullName>ExpectedValue__c</fullName>
    <label>Expected Value</label>
    <type>Text</type>
    <length>255</length>
</CustomField>