salesforce/force-app/main/default/objects/RecoveryAction__c/fields/ForensicFinding__c.field-meta.xml
<CustomField>
    <fullName>ForensicFinding__c</fullName>
    <label>Forensic Finding</label>
    <type>Lookup</type>
    <referenceTo>ForensicFinding__c</referenceTo>
    <relationshipName>RecoveryActions</relationshipName>
    <relationshipLabel>Recovery Actions</relationshipLabel>
    <required>true</required>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>