salesforce/force-app/main/default/objects/RecoveryAction__c/fields/ProjectedReclaimUsd__c.field-meta.xml
<CustomField>
    <fullName>ProjectedReclaimUsd__c</fullName>
    <label>Projected Reclaim USD</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>