salesforce/force-app/main/default/objects/RecoveryAction__c/fields/VerificationMessage__c.field-meta.xml
<CustomField>
    <fullName>VerificationMessage__c</fullName>
    <label>Verification Message</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>